<?xml version="1.0" encoding="utf-8"?><!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<resources>
    <string name="app_name">Prehistoric Florida</string>
    <string name="main_title">Prehistoric Florida</string>
    <string name="animal_label">Animals</string>
    <string name="games_label">Games</string>
    <string name="map_label">Map</string>
    <string name="sea_level_label"></string>
    <string name="animal_menu_title">Animals</string>
    <string name="info_button"></string>
    <string name="size_comparison_button"></string>
    <string name="evolution_button"></string>
    <string name="ar_button"></string>
    <string name="games_menu_title">Games</string>
    <string name="trivia_label"></string>
    <string name="scavenger_hunt_label"></string>
    <string name="animal_info">Animal Name</string>
    <string name="next_label"></string>
    <string name="back_label"></string>
    <string name="home_label"></string>
    <string name="enter_label">Enter</string>
    <string name="finish_label">Finish</string>
    <string name="start_label">Start</string>
    <string name="correct">Correct</string>
    <string name="feedback"></string>
    <string name="rating">Rating</string>
    <string name="answer">Answer</string>
    <string name="sealevel">Sea Level Changes</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="title_activity_map">Map</string>

    <string name="credit_title">Credits</string>
    <string name="credits">Jacob - Java\nJonathan - UI\nNikita and Anna - Graphics</string>



</resources>
