<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material,
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose.
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="30dip"
    android:weightSum="1">
    <TextView
        android:text="@string/animal_menu_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dip"
        android:textSize="50dp"
        android:layout_weight="0.26" />

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/info_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/animalinfo"
            android:text="@string/info_button" />
        <Button
            android:id="@+id/size_comparison_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/sizecomp"
            android:text="@string/size_comparison_button"
            android:layout_marginLeft="75dp" />

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/evolution_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/evolution"
            android:text="@string/evolution_button"
            android:layout_marginTop="75dp" />
        <Button
            android:id="@+id/ar_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/ar_button"
            android:background="@drawable/ar"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="75dp" />
    </LinearLayout>


    </LinearLayout>
